fixed display flex-wrap bug

--- a/src/components/SplitScreen/SplitScreen.scss
+++ b/src/components/SplitScreen/SplitScreen.scss
@@ -19,7 +19,7 @@ $lg-wrap: calc (1920px / 2);
   }
 }
 
-@media only screen and (max-width: 845px) {
+@media only screen and (max-width: 720px) {
   .hide-on-wrap {
     visibility: hidden !important;
     width: 0px !important;
